fixed #bodyclick z-index to be on top of dropshadow, below right panel

--- a/app/sass/shared.sass
+++ b/app/sass/shared.sass
@@ -52,7 +52,7 @@ select
 // BODY CLICK
 #bodyClick
   +hidden
-  z-index: 1100
+  z-index: 1111
   +pointer
   width: 100%
   height: 100%
